--- a/sklearn_tfidf.ipynb
+++ b/sklearn_tfidf.ipynb
@@ -312,6 +312,10 @@
     "id": "WC-iJSB5YGOO"
    },
    "source": [
+    "\n",
+    "\n",
+    "**Example document (e-mail) :**\n",
+    "\n",
     "Finally, we will randomly select a document from the dataset, and have a look at it."
    ]
   },
@@ -573,6 +577,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "**Result :**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "bfKm3E0MP9yE"
    },
@@ -580,6 +593,10 @@
     "We finally have our result : the words sorted by their tf-idf weights!\n",
     "\n",
     "We can then know what words were more or less informative in the classification decision by looking to the begining of the list (less informative) or to its end (more informative).  \n",
+    "\n",
+    "\n",
+    "\n",
+    "**Visualisation :**\n",
     "  \n",
     "The remaining code will just give us a nice visual with word, tf-idf score, term frequency and document frequency."
    ]
@@ -648,7 +665,8 @@
     "id": "U49jO_AtLpBi"
    },
    "source": [
-    "As a list :"
+    "As a list :  \n",
+    "(\"most\" and \"least\" need swap)"
    ]
   },
   {
@@ -1068,6 +1086,22 @@
    ],
    "source": [
     "pd.DataFrame(document_words_informations_pandas).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "**Analysis :**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the main topic words from the original e-mail \"quadra\", \"900\" and \"monitor\". We also find \"uppsala\" that is noise from the e-mail metadata (university name)."
    ]
   },
   {
