--- a/sklearn_tfidf.ipynb
+++ b/sklearn_tfidf.ipynb
@@ -665,8 +665,7 @@
     "id": "U49jO_AtLpBi"
    },
    "source": [
-    "As a list :  \n",
-    "(\"most\" and \"least\" need swap)"
+    "As a list : "
    ]
   },
   {
